# atmarkit_grpc

./: README.md
dotnet/1/GrpcHello/: Program.cs
dotnet/1/GrpcHello/Properties/: launchSettings.json
dotnet/1/GrpcHello/Protos/: book.proto  greet.proto
dotnet/1/GrpcHello/Services/: BookService.cs  GreeterService.cs
dotnet/1/GrpcHelloClient/: GrpcHelloClient.csproj  Program.cs
dotnet/1/GrpcHelloClient/Protos/: greet.proto
dotnet/2/GrpcBookInfo/: GrpcBookInfo.csproj  Program.cs
dotnet/2/GrpcBookInfo/Properties/: launchSettings.json
dotnet/2/GrpcBookInfo/Protos/: bookinfo.proto  greet.proto
dotnet/2/GrpcBookInfo/Services/: BookInfoService.cs  GreeterService.cs
dotnet/2/GrpcBookInfoClient/: GrpcBookInfoClient.csproj  Program.cs
dotnet/2/GrpcBookInfoClient/Protos/: bookinfo.proto
kotlin/examples/: README.md  settings.gradle.kts
kotlin/examples/android-bookinfo/: build.gradle.kts
kotlin/examples/protos/src/main/proto/io/grpc/examples/bookinfo/: BUILD.bazel  bookinfo.proto
nodejs/: package-lock.json
nodejs/Client/: bookinfo_register.js  bookinfo_search.js
nodejs/Data/: bookinfo.json  register.json
nodejs/Protos/: bookinfo.proto
nodejs/Server/: bookinfo_server.js
python/Client/: bookinfo_client.py  bookinfo_pb2_grpc.py
python/Protos/: bookinfo.proto
python/Server/: bookinfo_pb2.py  bookinfo_pb2.pyi  bookinfo_server.py
summaries/: book.proto
swift/BookInfoClient/BookInfoClient/: BookInfoClientApp.swift  ContentView.swift  bookinfo.grpc.swift  bookinfo.pb.swift
swift/BookInfoClient/BookInfoClient.xcodeproj/: project.pbxproj
(+6 files in other folders)
