load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "bookinfo_proto",
    srcs = ["bookinfo.proto"],
    //deps = ["@com_google_protobuf//:duration_proto"],
)

java_proto_library(
    name = "bookinfo_java_proto",
    deps = [":bookinfo_proto"],
)

java_lite_proto_library(
    name = "bookinfo_java_proto_lite",
    deps = [":bookinfo_proto"],
)

kt_jvm_proto_library(
    name = "bookinfo_kt_proto",
    deps = [":bookinfo_proto"],
)

kt_jvm_grpc_library(
    name = "bookinfo_kt_grpc",
    srcs = [":bookinfo_proto"],
    deps = [":bookinfo_java_proto"],
)

kt_jvm_grpc_library(
    name = "bookinfo_kt_grpc_lite",
    srcs = [":bookinfo_proto"],
    flavor = "lite",
    deps = [":bookinfo_java_proto_lite"],
)
